// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Custom Style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "red",
      },
      Object {
        "backgroundColor": "#fff",
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 5,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSv2CxOJIZX-hrhUZzyBcZ8t3_aJ6Zo0VFvs_loZIEpl_SkXUWJ0JeLTf-A",
        }
      }
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 3,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#ccc",
          "borderLeftWidth": 1,
          "borderRightWidth": 1,
          "flex": 1,
          "paddingLeft": "5%",
          "paddingRight": "10%",
          "paddingTop": "5%",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "fontFamily": "Roboto-Bold",
            "fontSize": 30,
          }
        }
      >
        Cool!
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#c1c1c1",
              "fontFamily": "Roboto-Bold",
              "fontSize": 16,
              "paddingLeft": 10,
            }
          }
        >
          km
        </Text>
      </View>
    </View>
  </View>
  <View>
    <Image
      source={
        Object {
          "uri": "https://pbs.twimg.com/profile_images/3165824968/721ae4b725f6f5638b50527438f6901e.jpeg",
        }
      }
    />
  </View>
</View>
`;

exports[`Storyshots Card Default 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "backgroundColor": "#fff",
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 5,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSv2CxOJIZX-hrhUZzyBcZ8t3_aJ6Zo0VFvs_loZIEpl_SkXUWJ0JeLTf-A",
        }
      }
      style={
        Object {
          "flex": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 3,
      }
    }
  >
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#ccc",
          "borderLeftWidth": 1,
          "borderRightWidth": 1,
          "flex": 1,
          "paddingLeft": "5%",
          "paddingRight": "10%",
          "paddingTop": "5%",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "fontFamily": "Roboto-Bold",
            "fontSize": 30,
          }
        }
      >
        Cool!
      </Text>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#c1c1c1",
              "fontFamily": "Roboto-Bold",
              "fontSize": 16,
              "paddingLeft": 10,
            }
          }
        >
          km
        </Text>
      </View>
    </View>
  </View>
  <View>
    <Image
      source={
        Object {
          "uri": "https://pbs.twimg.com/profile_images/3165824968/721ae4b725f6f5638b50527438f6901e.jpeg",
        }
      }
    />
  </View>
</View>
`;
